fix overflow main

--- a/src/scss/core/_reset.scss
+++ b/src/scss/core/_reset.scss
@@ -132,3 +132,6 @@ table {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
 }
+main {
+  overflow-x: hidden;
+}
